Added unsurveyed event list in app install and uninstall

--- a/app/src/main/res/layout/activity_surveyed_events.xml
+++ b/app/src/main/res/layout/activity_surveyed_events.xml
@@ -25,9 +25,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:paddingStart="@dimen/profile_banner_left_right_padding"
+            android:paddingStart="10dp"
             android:paddingTop="@dimen/divider_margin"
-            android:paddingEnd="@dimen/profile_banner_left_right_padding"
+            android:paddingEnd="20dp"
             android:paddingBottom="@dimen/divider_margin"
             android:text="@string/surveyed_events"
             android:textColor="@color/black"
