--- a/app/src/main/res/layout/activity_surveyed_events.xml
+++ b/app/src/main/res/layout/activity_surveyed_events.xml
@@ -34,4 +34,13 @@
             android:textSize="@dimen/screen_title_size"
             android:textStyle="bold" />
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/activity_surveyed_events_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="80dp"
+        android:scrollbars="vertical"
+        app:layout_constraintTop_toBottomOf="@id/activity_surveyed_events_head_bar" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
