Hide permission deny comfort level question from UI

--- a/app/src/main/res/layout/activity_permission_deny_survey.xml
+++ b/app/src/main/res/layout/activity_permission_deny_survey.xml
@@ -143,6 +143,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/material_card_spacing"
+                android:visibility="gone"
                 android:layout_marginTop="@dimen/material_card_spacing"
                 android:layout_marginRight="@dimen/material_card_spacing"
                 card_view:cardElevation="10dp">
