--- a/app/src/main/res/layout/activity_permission_grant_survey.xml
+++ b/app/src/main/res/layout/activity_permission_grant_survey.xml
@@ -181,6 +181,95 @@
 
             </com.google.android.material.card.MaterialCardView>
 
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/permission_grant_temporary_card"
+                style="@style/Widget.MaterialComponents.CardView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/material_card_spacing"
+                android:layout_marginTop="@dimen/material_card_spacing"
+                android:layout_marginRight="@dimen/material_card_spacing"
+                card_view:cardElevation="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/permission_grant_question_temporary"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="27dp"
+                        android:paddingTop="15dp"
+                        android:paddingEnd="20dp"
+                        android:text="@string/permission_grant_question_temporary"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <com.google.android.material.button.MaterialButton
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:id="@+id/permission_grant_button_temporary"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="35dp"
+                        android:gravity="start|center_vertical"
+                        android:textColor="@color/black"
+                        android:textAllCaps="false"
+                        android:layout_marginTop="10dp"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="10dp"
+                        android:text="@string/select_an_option"/>
+                </LinearLayout>
+
+            </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/permission_grant_reminder_card"
+                style="@style/Widget.MaterialComponents.CardView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_marginLeft="@dimen/material_card_spacing"
+                android:layout_marginTop="@dimen/material_card_spacing"
+                android:layout_marginRight="@dimen/material_card_spacing"
+                card_view:cardElevation="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/permission_grant_question_reminder"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="27dp"
+                        android:paddingTop="15dp"
+                        android:paddingEnd="20dp"
+                        android:text="@string/permission_grant_question_reminder"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <com.google.android.material.button.MaterialButton
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:id="@+id/permission_grant_button_reminder"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="35dp"
+                        android:gravity="start|center_vertical"
+                        android:textColor="@color/black"
+                        android:textAllCaps="false"
+                        android:layout_marginTop="10dp"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="10dp"
+                        android:text="@string/select_an_option"/>
+                </LinearLayout>
+
+            </com.google.android.material.card.MaterialCardView>
+
             <TextView
                 android:id="@+id/permission_grant_survey_answered_on"
                 android:layout_marginTop="20dp"
