--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -244,6 +244,70 @@
                 android:background="@color/light_gray" />
 
             <LinearLayout
+                android:id="@+id/heartbeat_reminder_container"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/profile_banner_height"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/profile_banner_left_right_padding"
+                android:paddingEnd="@dimen/profile_banner_left_right_padding">
+
+                <TextView
+                    android:id="@+id/heartbeat_reminder_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/profile_banner_height_half"
+                    android:gravity="bottom"
+                    android:text="@string/last_heartbeat"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/heartbeat_reminder_value"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/profile_banner_height_half"
+                    android:gravity="top"
+                    android:text="@string/empty"
+                    android:textColor="@color/black" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_margin="@dimen/divider_margin"
+                android:background="@color/light_gray" />
+
+            <LinearLayout
+                android:id="@+id/demographic_reminder_container"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/profile_banner_height"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/profile_banner_left_right_padding"
+                android:paddingEnd="@dimen/profile_banner_left_right_padding">
+
+                <TextView
+                    android:id="@+id/demographic_reminder_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/profile_banner_height_half"
+                    android:gravity="bottom"
+                    android:text="@string/last_demographic"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/demographic_reminder_value"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/profile_banner_height_half"
+                    android:gravity="top"
+                    android:text="@string/empty"
+                    android:textColor="@color/black" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_margin="@dimen/divider_margin"
+                android:background="@color/light_gray" />
+
+            <LinearLayout
                 android:id="@+id/version_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
